--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "dayjs": "^1.11.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.4.0",
@@ -21,6 +22,7 @@
     "mongoose": "^5.1.1",
     "morgan": "~1.9.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.6",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
