--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.11.0",
     "dayjs": "^1.11.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
