--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "randomstring": "^1.2.2",
+    "req-flash": "^0.0.3",
     "rss-parser": "^3.12.0",
     "slug": "^8.0.0"
   }
