--- a/package.json
+++ b/package.json
@@ -9,17 +9,39 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.11.0",
+    "datatables.net": "^1.13.1",
+    "datatables.net-autofill": "^2.5.1",
+    "datatables.net-bs4": "^1.13.1",
+    "datatables.net-buttons": "^2.3.3",
+    "datatables.net-colreorder": "^1.6.1",
+    "datatables.net-fixedcolumns": "^4.2.1",
+    "datatables.net-fixedheader": "^3.3.1",
+    "datatables.net-keytable": "^2.8.0",
+    "datatables.net-responsive": "^2.4.0",
+    "datatables.net-rowgroup": "^1.3.0",
+    "datatables.net-rowreorder": "^1.3.1",
+    "datatables.net-scroller": "^2.1.0",
+    "datatables.net-searchbuilder": "^1.4.0",
+    "datatables.net-searchpanes": "^2.1.0",
+    "datatables.net-select": "^1.5.0",
     "dayjs": "^1.11.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "ejs": "~2.5.7",
+    "eve": "^0.5.4",
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.4.0",
     "express-flash-notification": "^0.5.0",
     "express-session": "^1.15.6",
     "express-validator": "^6.14.2",
+    "htmlhint": "^1.1.4",
     "http-errors": "~1.6.2",
+    "jquery": "npm:jQuery@^1.7.4",
+    "jQuery": "^1.7.4",
+    "jquery-mapael": "^2.2.0",
+    "jquery-mousewheel": "^3.1.13",
     "md5": "^2.3.0",
+    "moment": "^2.29.4",
     "mongoose": "^5.1.1",
     "morgan": "~1.9.0",
     "multer": "^1.4.5-lts.1",
@@ -27,9 +49,12 @@
     "nodemon": "^2.0.6",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.16.1",
     "randomstring": "^1.2.2",
+    "raphael": "^2.3.0",
     "req-flash": "^0.0.3",
     "rss-parser": "^3.12.0",
-    "slug": "^8.0.0"
+    "slug": "^8.0.0",
+    "xml2js": "^0.4.23"
   }
 }
