--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-flash-notification": "^0.5.0",
     "express-session": "^1.15.6",
     "express-validator": "^6.14.2",
+    "gh-pages": "^4.0.0",
     "htmlhint": "^1.1.4",
     "http-errors": "~1.6.2",
     "jquery": "npm:jQuery@^1.7.4",
